--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://goreleaser.com/static/schema.json
 project_name: flfa
 
 release:
@@ -12,6 +13,7 @@ before:
 builds:
   - binary: flfa
     id: flfa
+    main: ./cmd/flfa
     env:
       - CGO_ENABLED=0
     goos:
@@ -27,12 +29,13 @@ builds:
     gcflags:
       - all=-trimpath={{.Env.WORKINGDIR}}
     ldflags:
-      - -s -w -X main.version={{.Version}} -X main.commit={{.ShortCommit}} -X main.date={{.CommitDate}} -X main.honeycomb_api_key={{.Env.HONEYCOMB_API_KEY}} -X main.honeycomb_dataset={{.Env.HONEYCOMB_DATASET}}
-    mod_timestamp: '{{ .CommitTimestamp }}'
+      - -s -w -X main.app_version={{.Version}} -X main.commit={{.ShortCommit}} -X main.date={{.CommitDate}} -X main.honeycomb_api_key={{.Env.HONEYCOMB_API_KEY}} -X main.honeycomb_dataset={{.Env.HONEYCOMB_DATASET}}
+    mod_timestamp: "{{ .CommitTimestamp }}"
     tags:
       - telemetry
   - binary: flfa
     id: notel_flfa
+    main: ./cmd/flfa
     env:
       - CGO_ENABLED=0
     goos:
@@ -48,8 +51,8 @@ builds:
     gcflags:
       - all=-trimpath={{.Env.WORKINGDIR}}
     ldflags:
-      - -s -w -X main.version={{.Version}} -X main.commit={{.ShortCommit}} -X main.date={{.CommitDate}} -X main.honeycomb_api_key={{.Env.HONEYCOMB_API_KEY}} -X main.honeycomb_dataset={{.Env.HONEYCOMB_DATASET}}
-    mod_timestamp: '{{ .CommitTimestamp }}'
+      - -s -w -X main.app_version={{.Version}} -X main.commit={{.ShortCommit}} -X main.date={{.CommitDate}} -X main.honeycomb_api_key={{.Env.HONEYCOMB_API_KEY}} -X main.honeycomb_dataset={{.Env.HONEYCOMB_DATASET}}
+    mod_timestamp: "{{ .CommitTimestamp }}"
 
 archives:
   - name_template: "flfa_{{ tolower .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}{{ if .Mips }}_{{ .Mips }}{{ end }}"
@@ -85,9 +88,8 @@ archives:
     files:
       - modules/**/*
 
-
 checksum:
-  name_template: 'checksums.txt'
+  name_template: "checksums.txt"
 
 snapshot:
   name_template: "{{ .Tag }}-{{.ShortCommit}}"
@@ -96,5 +98,5 @@ changelog:
   sort: asc
   filters:
     exclude:
-      - '^docs:'
-      - '^test:'
+      - "^docs:"
+      - "^test:"
