--- a/emfs/modules/core/Traits/BaseProfile.yaml
+++ b/emfs/modules/core/Traits/BaseProfile.yaml
@@ -4,18 +4,67 @@ entries:
       If this Group is not Shaken, in difficult terrain, or in cover,
       they may Move into a defensive formation with all models in base contact.
       They have +1 T until the start of their next activation.
+    scripting:
+      in_play:
+        - register_for:
+          - GetValidActivations
+          when:
+            - notShaken
+            - notIn("DifficultTerrain")
+            - notIn("Cover")
+          then:
+            - addAction("DefensiveFormation")
   - name: Defiant
     effect: |
       If this Group is not Shaken and not already in melee, when an enemy successfully activates to Attack them,
       they may test at 7+ to meet the enemy halfway.
       Count both Groups as attacking for to-hit rolls.
+    scripting:
+      in_play:
+        - register_for:
+            - TargetedByAttack
+          when:
+            - notShaken
+            - notIn("Melee")
+          then:
+            - prompt("DefiantReaction")
   - name: Elusive
     effect: |
       If this Group is not Shaken and not already in melee, when an enemy successfully activates to Attack them,
       they may immediately test at 7+ to move up to half their Move distance and Shoot at that enemy.
+    scripting:
+      in_play:
+        - register_for:
+            - TargetedByAttack
+          when:
+            - notShaken
+            - notIn("Melee")
+          then:
+            - prompt("ElusiveReaction")
   - name: Nimble
     effect: This Group treats difficult terrain as normal terrain instead.
+    scripting:
+      in_play:
+        - register_for:
+            - DeterminingMovement
+          then:
+            - treatTerrainAs("Difficult", "Normal")
   - name: Ponderous
     effect: This Group treats difficult terrain as impassable terrain instead.
+    scripting:
+      in_play:
+        - register_for:
+            - DeterminingMovement
+          then:
+            - treatTerrainAs("Difficult", "Impassable")
   - name: Reckless
     effect: If this Group is not Shaken, it must activate to Attack, if possible.
+    scripting:
+      in_play:
+        - register_for:
+            - GetValidActivations
+          when:
+            - notShaken
+            - can("Attack")
+          then:
+            - limitActivationTo("Attack")
